[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/ProgressBar.gd" type="Script" id=1]
[ext_resource path="res://Scripts/building.gd" type="Script" id=2]
[ext_resource path="res://Assets/progress-bar-progress.png" type="Texture" id=3]
[ext_resource path="res://Assets/progress-bar-under.png" type="Texture" id=4]
[ext_resource path="res://Assets/progress-bar-over.png" type="Texture" id=5]
[ext_resource path="res://Assets/archeryRange.png" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.6374
height = 5.96066

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.976471, 0.211765, 0.00784314, 1 )
corner_detail = 6
shadow_color = Color( 0.501961, 0.0235294, 0.0235294, 0.6 )
anti_aliasing = false
anti_aliasing_size = 5

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.435294 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.976471, 0.211765, 0.00784314, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.109804, 0.101961, 0.101961, 1 )

[node name="archeryRange" type="StaticBody2D"]
scale = Vector2( 1.00335, 1 )
script = ExtResource( 2 )
buildTime = 5
maxSoldier = 5
type = "range"

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.0536003, 0.053421 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -16.0
margin_top = -25.0
margin_right = 16.0
margin_bottom = -20.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
max_value = 50.0
step = 0.1
percent_visible = false
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpawnProgress" type="TextureProgress" parent="."]
margin_left = 21.9707
margin_top = -16.0
margin_right = 26.9707
margin_bottom = 16.0
max_value = 5.0
value = 3.0
rounded = true
texture_under = ExtResource( 4 )
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 3 )
fill_mode = 3
tint_under = Color( 0.376471, 0.376471, 0.376471, 0.341176 )
tint_over = Color( 1, 1, 1, 0.415686 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildTimer" type="Timer" parent="."]

[node name="BuildProgress" type="ProgressBar" parent="."]
margin_left = -16.0
margin_top = -25.0
margin_right = 16.0
margin_bottom = -5.0
rect_scale = Vector2( 1, 0.25 )
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="BuildTimer" to="." method="_on_BuildTimer_timeout"]
